# lyrics-gui

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
